<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#FFFFFF"
    >
    
    <!-- El titulo -->
    <include 
        android:id="@+id/title"
        layout="@layout/header16"
        />
    
    <!-- El menu -->
    <RelativeLayout 
        android:id="@+id/menu"
    	android:layout_width="match_parent"
    	android:layout_height="35dip"
    	android:layout_below="@id/title"
    	android:paddingTop="4dip"
    	>
		<LinearLayout
		    android:layout_width="match_parent"
    		android:layout_height="match_parent"
		    >
		<!-- Boton: Mis cuentas -->
		<Button 
		    android:id="@+id/btnmenu_mis_cuentas"
		    android:layout_width="wrap_content"
    		android:layout_height="match_parent"
    		android:drawableLeft="@drawable/img_miscuentasactivo"
    		android:background="@drawable/btnmenu_left"
    		android:layout_weight="1"
    		android:paddingLeft="4dip"
    		android:paddingRight="4dip"
    		android:text="@string/menu_mis_cuentas"
    		android:textSize="10sp"
    		android:textColor="#FFFFFF"
    		android:gravity="right|center"
    		android:textStyle="bold"
		    />
		<!-- Boton: Tarjetas de credito -->
		<Button 
		    android:id="@+id/btnmenu_tarjetas"
		    android:layout_width="wrap_content"
    		android:layout_height="match_parent"
    		android:drawableLeft="@drawable/img_tarcreditinactivo"
    		android:background="@drawable/btnmenu_inactivo"
    		android:layout_weight="1"
    		android:paddingLeft="4dip"
    		android:paddingRight="4dip"
    		android:text="@string/menu_tarjetas_de_credito"
    		android:textColor="#767A7D"
    		android:textSize="10sp"
    		android:gravity="right|center"
    		android:textStyle="bold"
		    />
		<!-- Boton inversiones -->
		<Button 
		    android:id="@+id/btnmenu_inversiones"
		    android:layout_width="wrap_content"
    		android:layout_height="match_parent"
    		android:drawableLeft="@drawable/img_invinactivo"
    		android:background="@drawable/btnmenu_inactivo"
    		android:layout_weight="1"
    		android:paddingLeft="4dip"
    		android:paddingRight="4dip"
    		android:text="@string/menu_inversiones"
    		android:textColor="#767A7D"
    		android:textSize="10sp"
    		android:gravity="right|center"
    		android:textStyle="bold"
		    />
		</LinearLayout>
    </RelativeLayout>
    
    <!-- El contenido -->
    <LinearLayout
        android:id="@+id/contenido"
        android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:layout_below="@id/menu"
    	>
        <!-- Mi expandable list que llenare con las cuentas -->
        <ExpandableListView 
            android:id="@+id/ExpList"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:groupIndicator="@null"
            >
        </ExpandableListView>
    </LinearLayout>
</RelativeLayout>