<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <!-- El titulo -->
    <RelativeLayout 
        android:id="@+id/title"
    	android:layout_width="match_parent"
    	android:layout_height="50dip"
    	android:background="@drawable/header"
        >
        <!-- Boton que no recuerdo para que sirve -->
        <ImageButton 
		    android:id="@+id/btn_asdf"
		    android:layout_width="42dip"
    		android:layout_height="42dip"
    		android:layout_alignParentLeft="true"
    		android:background="@drawable/fondo_btn"
    		android:src="@drawable/btnheader_asdf"
    		android:layout_marginLeft="4dip"
    		android:layout_marginBottom="4dip"
    		android:layout_marginTop="4dip"
    		android:scaleType="centerInside"
		    />
        <!-- Pongo un espacio? -->
        <!-- Boton para bloquear -->
        <ImageButton 
		    android:id="@+id/btn_bloquear"
		    android:layout_width="42dip"
    		android:layout_height="42dip"
    		android:layout_alignParentRight="true"
    		android:background="@drawable/fondo_btn"
    		android:src="@drawable/btnheader_bloquear"
    		android:layout_marginRight="4dip"
    		android:layout_marginBottom="4dip"
    		android:layout_marginTop="4dip"
    		android:scaleType="centerInside"
		    />
    </RelativeLayout>
    
    <!-- El menu -->
    <RelativeLayout 
        android:id="@+id/menu"
    	android:layout_width="match_parent"
    	android:layout_height="35dip"
    	android:layout_below="@id/title"
    	android:paddingTop="4dip"
    	>
		<LinearLayout
		    android:layout_width="match_parent"
    		android:layout_height="match_parent"
		    >
		<!-- Boton: Mis cuentas -->
		<Button 
		    android:id="@+id/btnmenu_mis_cuentas"
		    android:layout_width="wrap_content"
    		android:layout_height="match_parent"
    		android:drawableLeft="@drawable/img_miscuentasactivo"
    		android:background="@drawable/btnmenu_left"
    		android:layout_weight="1"
    		android:paddingLeft="4dip"
    		android:paddingRight="4dip"
    		android:text="@string/menu_mis_cuentas"
    		android:textSize="10sp"
    		android:textColor="#FFFFFF"
    		android:gravity="right|center"
    		android:textStyle="bold"
		    />
		<!-- Boton: Tarjetas de credito -->
		<Button 
		    android:id="@+id/btnmenu_tarjetas"
		    android:layout_width="wrap_content"
    		android:layout_height="match_parent"
    		android:drawableLeft="@drawable/img_tarcreditinactivo"
    		android:background="@drawable/btnmenu_inactivo"
    		android:layout_weight="1"
    		android:paddingLeft="4dip"
    		android:paddingRight="4dip"
    		android:text="@string/menu_tarjetas_de_credito"
    		android:textColor="#767A7D"
    		android:textSize="10sp"
    		android:gravity="right|center"
    		android:textStyle="bold"
		    />
		<!-- Boton inversiones -->
		<Button 
		    android:id="@+id/btnmenu_inversiones"
		    android:layout_width="wrap_content"
    		android:layout_height="match_parent"
    		android:drawableLeft="@drawable/img_invinactivo"
    		android:background="@drawable/btnmenu_inactivo"
    		android:layout_weight="1"
    		android:paddingLeft="4dip"
    		android:paddingRight="4dip"
    		android:text="@string/menu_inversiones"
    		android:textColor="#767A7D"
    		android:textSize="10sp"
    		android:gravity="right|center"
    		android:textStyle="bold"
		    />
		</LinearLayout>
    </RelativeLayout>
    
    <Button 
			    android:id="@+id/btn_prueba"
			    android:layout_width="match_parent"
    			android:layout_height="wrap_content"
    			android:layout_below="@id/menu"
    			android:text="Get JSON" 
			    />
        
    <!-- El contenido -->
    <LinearLayout
        android:id="@+id/contenido"
        android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:layout_below="@id/btn_prueba" 
    	>
        <!-- Aqui el contenido, eso lo veo mañana -->
        <ScrollView 
            android:id="@+id/scroll_cuentas"
        	android:layout_width="match_parent"
    		android:layout_height="match_parent"
            >
            <ExpandableListView 
                android:id = "@+id/lista"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:groupIndicator="@drawable/group_indicator"
                >
                <TextView 
                    android:id = "@+id/lista_vacio"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/lista_noitems"
                    />
            </ExpandableListView>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>