<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#FFFFFF"
    >
    
    <!-- El titulo -->
    <include 
        android:id="@+id/title"
        layout="@layout/header17"
        />
    
    <!-- Los menus -->
    <RelativeLayout 
        android:id="@+id/menu"
    	android:layout_width="match_parent"
    	android:layout_height="35dip"
    	android:layout_below="@id/title"
    	android:paddingTop="4dip"
    	>
		<!-- Menu 1 -->
		<LinearLayout
		    android:id="@+id/menu1"
		    android:layout_width="match_parent"
    		android:layout_height="match_parent"
		    >
			<!-- Boton: Movimientos -->
			<Button 
		    	android:id="@+id/btnmovimientos"
		    	android:layout_width="wrap_content"
    			android:layout_height="match_parent"
    			android:drawableLeft="@drawable/img_movimientosinactivo"
    			android:background="@drawable/btnmenu_inactivo"
    			android:layout_weight="1"
    			android:paddingLeft="4dip"
    			android:paddingRight="4dip"
    			android:text="@string/menu_movimientos"
    			android:textSize="10sp"
    			android:textColor="#767A7D"
    			android:gravity="right|center"
    			android:textStyle="bold"
		    	/>
			<!-- Boton Saldo Bloqueado -->
			<Button 
		    	android:id="@+id/btnsaldo_bloqueado"
		    	android:layout_width="wrap_content"
    			android:layout_height="match_parent"
    			android:drawableLeft="@drawable/icon_saldobloqueadoactivo"
    			android:background="@drawable/btnmenu_left"
    			android:layout_weight="1"
    			android:paddingLeft="4dip"
    			android:paddingRight="4dip"
    			android:text="@string/menu_saldo_bloqueado"
    			android:textColor="#FFFFFF"
    			android:textSize="10sp"
    			android:gravity="right|center"
    			android:textStyle="bold"
		    	/>
		</LinearLayout>
    </RelativeLayout>
    
    <!-- Pie de pagina -->
    <LinearLayout 
        android:id="@+id/footer"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/btnmenu_left"
        >
        <TextView 
            android:id="@+id/footer_saldo_bloqueado"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/footer_saldo_bloqueado"
            android:textSize="14sp"
    		android:textColor="#FFFFFF"
    		android:gravity="right|center"
    		android:textStyle="bold"
    		android:layout_marginRight="4dip"
            />
    </LinearLayout>
    
    <!-- El contenido -->

    <RelativeLayout
        android:id="@+id/contenido"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/footer"
        android:layout_below="@id/menu" >

        <!-- Aqui el contenido, eso lo veo mañana -->
        <include 
        	android:id="@+id/cuenta"
        	layout = "@layout/expandlist_group_item"
        	/>
			
			<!-- TextViews con los datos de la cuenta -->

        <ListView
            android:id="@+id/list"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:groupIndicator="@null"
            android:background="@drawable/fondo_lista"
            android:layout_below="@id/cuenta" >
        </ListView>
    </RelativeLayout>
</RelativeLayout>